[gd_scene load_steps=19 format=3 uid="uid://dml1nvpclhf7"]

[ext_resource type="Texture2D" uid="uid://mds6jllxer0h" path="res://Assets/sprites/icons.png" id="1_05fa6"]
[ext_resource type="Script" path="res://Scenes/TokenShop/TokenShopItem.gd" id="1_h3mth"]
[ext_resource type="Script" path="res://addons/IconManager/Icon.gd" id="2_nqj62"]
[ext_resource type="Script" path="res://Resources/UtilityNode/TooltipGrabber.gd" id="4_ebpj2"]

[sub_resource type="Texture2D" id="Texture2D_ch1wy"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_nqj62")
name = "tokenshop/upgrade_quest"

[sub_resource type="Texture2D" id="Texture2D_r7k7g"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_nqj62")
name = "icons/locked_flat"

[sub_resource type="AtlasTexture" id="AtlasTexture_5p4qq"]
atlas = ExtResource("1_05fa6")
region = Rect2(59, 7, 8, 9)
script = ExtResource("2_nqj62")
name = "checkmark"

[sub_resource type="Texture2D" id="Texture2D_urhtn"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_nqj62")
name = "tokenshop/hover_plus"

[sub_resource type="Gradient" id="Gradient_2wa0h"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4lfha"]
gradient = SubResource("Gradient_2wa0h")
width = 78

[sub_resource type="AtlasTexture" id="AtlasTexture_x8yt5"]
atlas = ExtResource("1_05fa6")
region = Rect2(20, 0, 6, 6)
script = ExtResource("2_nqj62")
name = "token_small"

[sub_resource type="LabelSettings" id="LabelSettings_7f3nl"]
font_size = 8
font_color = Color(0.972549, 0.705882, 0.0705882, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_b1ns7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/IconRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/Lock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer/Icon/Node2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HBoxContainer/Icon/Node2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eb46c"]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Icon/Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 6), Vector2(3, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Icon/Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/IconRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.4, 0.4, 0.4, 1)]
}

[sub_resource type="Animation" id="Animation_eaqph"]
resource_name = "lock"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/IconRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4, 0.4, 0.4, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/Lock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yu3nd"]
resource_name = "purchase"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/Lock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/IconRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4, 0.4, 0.4, 1)]
}

[sub_resource type="Animation" id="Animation_rs5th"]
resource_name = "unlock"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/IconRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/Lock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoyq6"]
_data = {
"RESET": SubResource("Animation_b1ns7"),
"hover": SubResource("Animation_eb46c"),
"lock": SubResource("Animation_eaqph"),
"purchase": SubResource("Animation_yu3nd"),
"unlock": SubResource("Animation_rs5th")
}

[node name="TokenShopItem" type="MarginContainer"]
offset_right = 122.0
offset_bottom = 22.0
script = ExtResource("1_h3mth")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Icon" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Icon"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Icon"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Icon/MarginContainer"]
layout_mode = 2
color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Icon/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Icon/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Icon/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="IconRect" type="TextureRect" parent="HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("Texture2D_ch1wy")
stretch_mode = 3

[node name="Lock" type="TextureRect" parent="HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
texture = SubResource("Texture2D_r7k7g")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Icon/MarginContainer/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_5p4qq")
stretch_mode = 3

[node name="TooltipGrabber" type="Node" parent="HBoxContainer/Icon"]
unique_name_in_owner = true
script = ExtResource("4_ebpj2")
c_unescape = true

[node name="Node2D" type="Node2D" parent="HBoxContainer/Icon"]
modulate = Color(1, 1, 1, 0)
position = Vector2(3, 6)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Icon/Node2D"]
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("Texture2D_urhtn")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture1D_4lfha")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TOKENEER I"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_x8yt5")
stretch_mode = 3

[node name="CostLabel" type="Label" parent="HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
label_settings = SubResource("LabelSettings_7f3nl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_eoyq6")
}

[connection signal="mouse_entered" from="HBoxContainer/Icon" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Icon" to="." method="_on_icon_mouse_exited"]
[connection signal="interacted" from="HBoxContainer/Icon/TooltipGrabber" to="." method="_on_tooltip_grabber_interacted"]
